--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img class="header__image" src="./images/__image_hero.jpg" alt="">
     </header>
     <div class="intro">
-      <h2 class="intro__title>">Conheça um pouco mais sobre a localização dos seus amigos virtuais</h2>
+      <h2 class="intro__title">Conheça um pouco mais sobre a localização dos seus amigos virtuais</h2>
       <h3 class="intro__subtitle">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</h3>
       <h4 class="intro__author">— Joseph Beuys</h4>
       <p1 class="intro__paragraph">A cidade de Practicum reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte Practicum tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p1>
