--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
       <h4 class="intro__author">— Joseph Beuys</h4>
       <p1 class="intro__paragraph">A cidade de Practicum reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte Practicum tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p1>
     </div>
+    <div class="photo-grid">
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_sol.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_laranja.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_ponte.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_campo.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_placas.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_cabana.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_montanha.jpg" alt=""></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_nublado.jpg" alt=""></div>
+    </div>
   </div>
     
 </body>
