--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
       <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_montanha.jpg" alt=""></div>
       <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_nublado.jpg" alt=""></div>
     </div>
+    <div class="places">  
+      <div class="places__grid">
+        <h2 class="places__title">Kiev, Ucrânia</h2>
+        <img class="places__img" src="./images/__place_ponte.jpg" alt="">
+        <a class="places__link" href="">Compre esta obra de arte como NFT</a>
+        <h3 class="places__url-heading">Artista</h3>
+        <h4 class="places__author">Natalia Dolgushina, produtora de conteúdo</h4>
+        <p1 class="places__paragraph">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p1>
+        <p2 class="places__paragraph">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p2>
+      </div>
+      <div class="places__grid">
+        <h2 class="places__title"></h2>
+        <img class="places__img" src="" alt="">
+        <a class="places__link"></a>
+        <h3 class="places__url-heading"></h3>
+        <h4 class="places__author"></h4>
+        <div class="places__paragraph-container">
+          <p1 class="places__paragraph"></p1>
+          <p2 class="places__paragraph"></p2>
+        </div>
+      </div>
+    </div>
   </div>
     
 </body>
