Add cover and footer section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
         </div>
       </div>
     </div>
+    <div class="cover">
+      <img class="cover__img" src="./images/__cover_img.jpg" alt="">
+      <img class="cover__overlay">
+      <div class="cover__container">
+        <h2 class="cover__title">Visite-Nos</h2>
+        <h3 class="cover__subtitle">Durante todo o ano
+          Galeria de Arte Practicum
+          404, Avenida Tim Berners-Lee.</h3>
+        <a class="cover__link">Comprar bilhetes</a>
+      </div>
+    </div>
+    <footer class="footer">
+      <h2 class="footer__copyright">© 2023. Marina Borges Bianchi</h2>
+    </footer>
   </div>
     
 </body>
