adjusting cover section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h3 class="cover__subtitle">Durante todo o ano
           Galeria de Arte Practicum
           404, Avenida Tim Berners-Lee.</h3>
-        <a class="cover__link">Comprar bilhetes</a>
+        <a class="cover__link" href="">Comprar bilhetes</a>
       </div>
     </div>
     <footer class="footer">
