--- a/index.html
+++ b/index.html
@@ -31,76 +31,21 @@
       <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_nublado.jpg" alt=""></div>
     </div>
     <div class="places">  
-      <div class="places__grid">
-        <div class="places__container-left">
-          <h2 class="places__title">Kiev, Ucrânia</h2>
-          <img class="places__img" src="./images/__place_ponte.jpg" alt="">
-          <a class="places__link" href="">Compre esta obra de arte como NFT</a>
+      <ul class="places__grid">
+        <li class="places__title">Kiev, Ucrânia</li>
+        <div class="places__author-container">
+          <h2 class="places__author">Artista</h2>
+          <h3 class="places__name">Natalia Dolgushina, produtora de conteúdo</h3>
         </div>
-        <div class="places__container-right">
-        <h3 class="places__url-heading">Artista</h3>
-        <h4 class="places__author">Natalia Dolgushina, produtora de conteúdo</h4>
-        <p1 class="places__paragraph-first">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p1>
-        <p2 class="places__paragraph-second">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p2>
+        <li class="places__image-container"><img class="places__image" src="./images/__place_ponte.jpg" alt=""></li>
+        <div class="places__paragraph-container">
+          <p1 class="places__paragraph">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p1>
+          <p2 class="places__paragraph">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p2>
         </div>
-      </div>
-      <div class="places__grid">
-        <div class="places__container-left">
-          <h2 class="places__title">Criccieth, País de Gales</h2>
-          <img class="places__img" src="./images/__place_sol.jpg" alt="">
-          <a class="places__link" href="">Compre esta obra de arte como NFT</a>
-        </div>
-        <div class="places__container-right">
-        <h3 class="places__url-heading">Artistas</h3>
-        <h4 class="places__author">Steffan Warren, editor-chefe</h4>
-        <h4 class="places__author">Kseniya Glagoleva, gerente de projeto</h4>
-        <p1 class="places__paragraph-first">A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p1>
-        <p2 class="places__paragraph-second">A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do Reino Unido.</p2>
-        </div>
-      </div>
-      <div class="places__grid">
-        <div class="places__container-left">
-          <h2 class="places__title">Berea, EUA</h2>
-          <img class="places__img" src="./images/__place_rua.jpg" alt="">
-          <a class="places__link" href="">Compre esta obra de arte como NFT</a>
-        </div>
-        <div class="places__container-right">
-        <h3 class="places__url-heading">Artista</h3>
-        <h4 class="places__author">Travis Turner, autor e editor</h4>
-        <p1 class="places__paragraph-first">Berea é uma pequena cidade localizada na parte central do Kentucky. A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado, e os visitantes encontrarão muitas oportunidades de compras: lojas com bijuterias artesanais, velas, artigos de madeira, galerias, ateliês de vidro e muito mais. A cidade realiza um festival anual que celebra o "pão de colher", um prato local feito com pão de milho e servido com uma colher de pau.</p1>
-        <p2 class="places__paragraph-second">No entanto, provavelmente é mais conhecido pela faculdade local. O Berea College foi fundado em 1855 e foi o primeiro colégio no sul a ser racialmente integrado, bem como o primeiro a ser misto. De forma um tanto singular, não cobra mensalidades - todo aluno recebe uma bolsa de estudos integral.</p2>
-        </div>
-      </div>
-      <div class="places__grid">
-        <div class="places__container-left">
-          <h2 class="places__title">Muramvya, Burundi</h2>
-          <img class="places__img" src="./images/__place_casa.jpg" alt="">
-          <a class="places__link" href="">Compre esta obra de arte como NFT</a>
-        </div>
-        <div class="places__container-right">
-        <h3 class="places__url-heading">Artista</h3>
-        <h4 class="places__author">Grevisse Kenguruka, editor técnico</h4>
-        <p1 class="places__paragraph-first">Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais políticas e econômicas do país.</p1>
-        <p2 class="places__paragraph-second">O clima é bastante frio à noite, mas durante o dia, você pensaria que está no céu. A 2.665 metros (8.743 pés) acima do nível do mar, o Monte Teza é um dos lugares mais frios da província. Mas essa brisa fresca permite uma das maiores plantações de chá e café do país, que representam a maior parte das exportações do Burundi.</p2>
-        <p3 class="places__paragraph-second">O Parque Nacional de Kibira, uma das maiores reservas de vida selvagem para macacos, se sobrepõe a quatro províncias, incluindo Muramvya. Este Parque Nacional encontra-se no ápice das belas montanhas do Congo-Nile Divide, variando entre 1.550 e 2.660 metros de altitude. Está repleta de uma bela vegetação e fonte para os vários rios e riachos que fornecem água em todo o país.</p3>
-        </div>
-      </div>
-      <div class="places__grid">
-        <div class="places__container-left">
-          <h2 class="places__title">Guarujá, Brasil</h2>
-          <img class="places__img" src="./images/__place_praia.jpg" alt="">
-          <a class="places__link" href="">Compre esta obra de arte como NFT</a>
-        </div>
-        <div class="places__container-right">
-        <h3 class="places__url-heading">Artista</h3>
-        <h4 class="places__author">Marina Borges Bianchi, web developer</h4>
-        <p1 class="places__paragraph-first">Com uma natureza exuberante espalhada por 27 praias com belezas totalmente diferentes que atraiam os turistas para a região, Guarujá foi reconhecido internacionalmente, na década de 70, com o título de “Pérola do Atlântico”.</p1>
-        <p2 class="places__paragraph-second">Atualmente a cidade continua a ser referência nacional na qualidade de suas praias, o desenvolvimento econômico das últimas décadas trouxe grandes investimentos ao setor portuário, náutico, hoteleiro, empresarial, imobiliário e do comércio. Hoje Guarujá é o destino ideal para quem quer desfrutar das belezas naturais e garantir e um passeio com muita diversão e cultura.</p2>
-        </div>
-      </div>
+        <a class="places__link" href="">Compre esta obra de arte como NFT</a>
     </div>
     <div class="cover">
-      <img class="cover__overlay">
+      <img class="cover__img" src="./images/__cover_img.jpg" alt="">
       <div class="cover__container">
         <h2 class="cover__title">Visite-Nos</h2>
         <h3 class="cover__subtitle">Durante todo o ano
@@ -112,7 +57,6 @@
     <footer class="footer">
       <h2 class="footer__copyright">© 2023. Marina Borges Bianchi</h2>
     </footer>
-  </div>
-    
+  </div> 
 </body>
 </html>
