--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h2 class="places__author">Artista</h2>
           <h3 class="places__name">Natalia Dolgushina, produtora de conteúdo</h3>
         </div>
-        <li class="places__image-container"><img class="places__image" src="./images/__place_ponte.jpg" alt=""></li>
+        <img class="places__image" src="./images/__place_ponte.jpg" alt="">
         <div class="places__paragraph-container">
           <p1 class="places__paragraph">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p1>
           <p2 class="places__paragraph">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p2>
