--- a/index.html
+++ b/index.html
@@ -7,56 +7,97 @@
   <title>TipleTen Homeland</title>
 </head>
 <body>
-  <div class="page">
-    <header class="header">
+  <section class="page">
+    <section class="header">
       <img class="header__logo" src="./images/__logo.png" alt="Logo da Practicum Art Gallery">
       <h1 class="header__title">De Pátria para Pátria</h1>
       <h2 class="header__subtitle">Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia</h2>
-      <img class="header__image" src="./images/__image_hero.jpg" alt="">
-    </header>
-    <div class="intro">
+      <img class="header__image" src="./images/__image_hero.jpg" alt="Vista de uma cidade litorânea em preto e branco">
+    </section>
+    <section class="intro">
       <h2 class="intro__title">Conheça um pouco mais sobre a localização dos seus amigos virtuais</h2>
       <h3 class="intro__subtitle">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</h3>
       <h4 class="intro__author">— Joseph Beuys</h4>
       <p1 class="intro__paragraph">A cidade de Practicum reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte Practicum tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p1>
-    </div>
-    <div class="photo-grid">
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_sol.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_laranja.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_ponte.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_campo.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_placas.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_cabana.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_montanha.jpg" alt=""></div>
-      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_nublado.jpg" alt=""></div>
-    </div>
-    <div class="places">  
+    </section>
+    <section class="photo-grid">
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_sol.jpg" alt="Foto de uma cidade com praia em um dia ensolarado"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_laranja.jpg" alt="Ftoto de uma igreja com um céu alaranjado"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_ponte.jpg" alt="Foto da vista de uma grande cidade com uma ponte que passa por um rio ao entardecer"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_campo.jpg" alt="Foto tirada em um campo com a vegetação alta e ao fundo uma casa"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_placas.jpg" alt="Foto de um jardim residencial com placas escrito: Green"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_cabana.jpg" alt="Foto de um moço que aponta para uma cabana de palha"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_montanha.jpg" alt="Foto de duas casas em meio a uma montanha"></div>
+      <div class="photo-grid__item"><img class="photo-grid__img" src="./images/__item_nublado.jpg" alt="Foto de uma vista com o mar e as casas ao redor, um final de tarde nublado com um pouco de sol"></div>
+    </section>
+    <section class="places">  
       <ul class="places__grid">
         <li class="places__title">Kiev, Ucrânia</li>
         <div class="places__author-container">
           <h2 class="places__author">Artista</h2>
           <h3 class="places__name">Natalia Dolgushina, produtora de conteúdo</h3>
         </div>
-        <img class="places__image" src="./images/__place_ponte.jpg" alt="">
+        <img class="places__image" src="./images/__place_ponte.jpg" alt="Foto da vista de uma grande cidade com uma ponte que passa por um rio ao entardecer">
         <div class="places__paragraph-container">
           <p1 class="places__paragraph">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p1>
           <p2 class="places__paragraph">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p2>
         </div>
-        <a class="places__link" href="">Compre esta obra de arte como NFT</a>
-    </div>
-    <div class="cover">
-      <img class="cover__img" src="./images/__cover_img.jpg" alt="">
+        <a class="places__link" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>
+      </ul>
+      <ul class="places__grid">
+        <li class="places__title">Criccieth, País de Gales</li>
+        <div class="places__author-container">
+          <h2 class="places__author">Artistas</h2>
+          <h3 class="places__name">Steffan Warren, editor-chefe</h3>
+          <h3 class="places__name">Kseniya Glagoleva, gerente de projeto</h3>
+        </div>
+        <img class="places__image" src="./images/__place_sol.jpg" alt="Foto de uma cidade com praia em um dia ensolarado">
+        <div class="places__paragraph-container">
+          <p1 class="places__paragraph">A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p1>
+          <p2 class="places__paragraph">A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do Reino Unido.</p2>
+        </div>
+          <a class="places__link" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>
+      </ul>
+      <ul class="places__grid">
+        <li class="places__title">Muramvya, Burundi</li>
+        <div class="places__author-container">
+          <h2 class="places__author">Artista</h2>
+          <h3 class="places__name">Grevisse Kenguruka, editor técnico</h3>
+        </div>
+        <img class="places__image" src="./images/__place_casa.jpg" alt="Foto com um monumento com cores vermelhas, verde e branco, o redor com rede elétrica">
+        <div class="places__paragraph-container">
+          <p1 class="places__paragraph">Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais políticas e econômicas do país.</p1>
+          <p2 class="places__paragraph">O clima é bastante frio à noite, mas durante o dia, você pensaria que está no céu. A 2.665 metros (8.743 pés) acima do nível do mar, o Monte Teza é um dos lugares mais frios da província. Mas essa brisa fresca permite uma das maiores plantações de chá e café do país, que representam a maior parte das exportações do Burundi.</p2>
+          <p3 class="places__paragraph">O Parque Nacional de Kibira, uma das maiores reservas de vida selvagem para macacos, se sobrepõe a quatro províncias, incluindo Muramvya. Este Parque Nacional encontra-se no ápice das belas montanhas do Congo-Nile Divide, variando entre 1.550 e 2.660 metros de altitude. Está repleta de uma bela vegetação e fonte para os vários rios e riachos que fornecem água em todo o país.</p3>
+        </div>
+          <a class="places__link" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>
+      </ul>
+      <ul class="places__grid">
+        <li class="places__title">Guarujá, Brasil</li>
+        <div class="places__author-container">
+          <h2 class="places__author">Artista</h2>
+          <h3 class="places__name">Marina Borges Bianchi, estudante da Tripleten</h3>
+        </div>
+        <img class="places__image" src="./images/__place_praia.jpg" alt="Foto de uma casa em uma pedra bem de frente ao mar">
+        <div class="places__paragraph-container">
+          <p1 class="places__paragraph">O Guarujá é uma deslumbrante cidade litorânea localizada no estado de São Paulo, Brasil. Conhecida por suas belas praias, é um destino popular tanto para moradores locais quanto para turistas que buscam sol, mar e lazer. Com uma variedade de praias, como a Praia das Pitangueiras, Praia da Enseada e Praia de Pernambuco, o Guarujá oferece opções para todos os gostos, desde esportes aquáticos até relaxamento à beira-mar. Além disso, a cidade também possui uma infraestrutura turística sólida, com restaurantes, hotéis e atividades culturais que garantem uma estadia agradável e diversificada para seus visitantes.</p1>
+        </div>
+          <a class="places__link" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>
+      </ul>
+    </section>
+    <section class="cover">
+      <img class="cover__img" src="./images/__cover_img.jpg" alt="Foto tirada em um campo com a vegetação alta e ao fundo uma casa" >
       <div class="cover__container">
         <h2 class="cover__title">Visite-Nos</h2>
         <h3 class="cover__subtitle">Durante todo o ano
           Galeria de Arte Practicum
           404, Avenida Tim Berners-Lee.</h3>
-        <a class="cover__link" href="">Comprar bilhetes</a>
+        <a class="cover__link" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Comprar bilhetes</a>
       </div>
-    </div>
-    <footer class="footer">
+    </section>
+    <section class="footer">
       <h2 class="footer__copyright">© 2023. Marina Borges Bianchi</h2>
-    </footer>
-  </div> 
+    </section>
+  </section> 
 </body>
 </html>
