--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <section class="page">
-    <section class="header">
+    <header class="header">
       <img class="header__logo" src="./images/__logo.png" alt="Logo da Practicum Art Gallery">
       <h1 class="header__title">De Pátria para Pátria</h1>
       <h2 class="header__subtitle">Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia</h2>
       <img class="header__image" src="./images/__image_hero.jpg" alt="Vista de uma cidade litorânea em preto e branco">
-    </section>
+    </header>
     <section class="intro">
       <h2 class="intro__title">Conheça um pouco mais sobre a localização dos seus amigos virtuais</h2>
       <h3 class="intro__subtitle">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</h3>
@@ -95,9 +95,9 @@
         <a class="cover__link" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Comprar bilhetes</a>
       </div>
     </section>
-    <section class="footer">
+    <footer class="footer">
       <h2 class="footer__copyright">© 2023. Marina Borges Bianchi</h2>
-    </section>
+    </footer>
   </section> 
 </body>
 </html>
