--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
     </section>
     <footer class="footer">
-      <h2 class="footer__copyright">© 2023. Marina Borges Bianchi</h2>
+      <h2 class="footer__copyright">&copy; 2023. Marina Borges Bianchi</h2>
     </footer>
   </section> 
 </body>
